# TRACING-TRAIT-EMERGENCE-A-PIPELINE-FOR-MECHANISTIC-INTERPRETABILITY-OF-CONCEPTS

./: .gitignore  LISCENSE  README.md  pyproject.toml
s0_dataset_generation/: .env  README.md  USAGE.md  expand_dataset.py  generate_sentences.py  label_sentences.py  visualize_labels.py
s0_dataset_generation/initial_hendrycks_data/: aggression.csv  caring.csv  dishonesty.csv  unfair.csv
s0_dataset_generation/seed_data/: brave.csv
s1_compute_all_features/: README.md  USAGE.md  extract_sae_features.py  gemma_scope_16k_configurations.json
s2_find_top_features/: README.md  USAGE.md  analyze_features.py
s3_feature_activation_graphs/: README.md  USAGE.md  plotting_utils.py  visualize_activations.py
s4_classifier_data_prep/: README.md  USAGE.md  generate_datasets.py  load_sentence_data.py  utils.py
s5_classifier_training/: README.md  USAGE.md
s5_classifier_training/d1_embedding_to_feature/working/: config.yaml  model.pkl
s5_classifier_training/d2_hidden_to_feature/working/: config.yaml  model.pkl
s5_classifier_training/d3_hidden_to_concept/working/: config.yaml  dataset.config  experiment_notes.md  model.pkl  results.json
s5_classifier_training/docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_FORMAT.md  DEVELOPMENT.md  TROUBLESHOOTING.md
s5_classifier_training/framework/: checkpoint.py  compare.py  new_experiment.py  shared_utils.py  train.py
